KIN-935. Page tile wrapping style fixes on mobile.

--- a/packages/common/src/assets/styles/_page-title.scss
+++ b/packages/common/src/assets/styles/_page-title.scss
@@ -35,7 +35,7 @@
     margin-bottom: 1.875rem;
     // line-height: normal;
     @media all and (min-width: 0) {
-      align-self: flex-start;
+      // align-self: flex-start;
     }
     @media all and (min-width: 768px) {
       align-self: flex-end;
